<resources>
    <string name="app_name">NoteApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
</resources>